# agent-rating-protocol

./: LICENSE  README.md  agent_rating_protocol_v2_whitepaper.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
agent_rating_protocol/: __init__.py  anti_goodhart.py  blind.py  cli.py  composition.py  portability.py  query.py  rating.py  signals.py  store.py  weight.py
examples/: quickstart.py
tests/: test_anti_goodhart.py  test_blind.py  test_composition.py  test_portability.py  test_query.py  test_rating.py  test_signals.py  test_store.py  test_weight.py
typescript/: README.md  package.json
typescript/src/: anti_goodhart.ts  blind.ts  composition.ts  index.ts  portability.ts  query.ts  rating.ts  signals.ts  store.ts  types.ts  weight.ts
typescript/tests/: rating.test.ts
